--- a/YesDay/Views/Couple/Overview.cshtml
+++ b/YesDay/Views/Couple/Overview.cshtml
@@ -2,9 +2,9 @@
 
 <div class="container">
     <div id="overviewheader" class="row">
-        <h3>Välkomna @Model.FirstName1 och @Model.FirstName2 !</h3>
+        <h2>Välkomna @Model.FirstName1 och @Model.FirstName2 !</h2>
     </div>
-    <div class="row">
+    <div class="row" style="">
         <h5>Välj någon av funktionerna och börja planera er stora dag!</h5>
     </div>
     <div class="row" style="padding-top:50px;">
@@ -33,8 +33,10 @@
         <div class="shadow-lg p-3 mb-5 bg-white rounded, col">
             <a asp-controller="Couple" asp-action="Expense" style="text-decoration:none;">
                 <img src="~/Images/budget.png" alt="Budget" style="width:75px;height:75px;" />
-                <p>Ha koll på er budget under hela planeringsprocessen genom att lägga till din totala 
-                budget och samtliga kostnader</p>
+                <p>
+                    Ha koll på er budget under hela planeringsprocessen genom att lägga till din totala
+                    budget och samtliga kostnader
+                </p>
             </a>
         </div>
         <div class="shadow-lg p-3 mb-5 bg-white rounded, col">
