--- a/YesDay/Views/Couple/CheckList.cshtml
+++ b/YesDay/Views/Couple/CheckList.cshtml
@@ -244,8 +244,13 @@
         <h2>Checklista</h2>
     </div>
 </div>
+<div class="row" style="margin-top:20px;">
+    <div class="col">
+        <a href="/couple/AddTask"><input class="btn btn-light" type="submit" value="Lägg till"></a>
+    </div>
+</div>
 <div class="container">
-    <div class="row">
+    <div class="row" style="margin-top:20px;">
         <div class="col-4">
             <h4>Att göra</h4>
         </div>
@@ -278,7 +283,6 @@
     </div>
 </div>
 
-<a href="/couple/AddTask"><input class="btn btn-light" type="submit" value="Lägg till"></a>
 
 
 
