--- a/YesDay/Views/Couple/AddVendor.cshtml
+++ b/YesDay/Views/Couple/AddVendor.cshtml
@@ -10,36 +10,34 @@
         </div>
     </div>
     <form asp-controller="Couple" asp-action="AddVendor" method="post">
-        <div class="row">
+        <div class="form-group-row">
+            <div class="row">
 
-            <div class="col-3">
-                <label asp-for="Service"></label>
+                <div class="col-3">
+                    <label asp-for="Service"></label>
+                </div>
+                <div class="col-3">
+                    <input class="form-control"  asp-for="Service" />
+                    <span asp-validation-for="Service"></span>
+                </div>
             </div>
-            <div class="col-3">
-                <input asp-for="Service" />
-                <span asp-validation-for="Service"></span>
+            <div class="row">
+                <div class="col-3">
+                    <label asp-for="ContactInfo"></label>
+                </div>
+                <div class="col-3">
+                    <textarea  class="form-control" asp-for="ContactInfo" rows="5"></textarea>
+                </div>
+            </div>
+            <div class="row" style="padding-top:40px;">
+                    <input class="btn btn-light" type="submit" Name="SaveCancel" value="Spara och stäng" />
+                    <input class="btn btn-light" type="submit" Name="SaveAdd" value="Spara och lägg till ny" />
             </div>
         </div>
-        <div class="row">
-            <div class="col-3">
-                <label asp-for="ContactInfo"></label>
-            </div>
-            <div class="col-3">
-                <textarea asp-for="ContactInfo" rows="10"></textarea>
-            </div>
-        </div>
-        <div class="row">
-            <div clas="col-3">
-                <input class="btn btn-light" type="submit" Name="SaveCancel" value="Spara och stäng" />
-                <input class="btn btn-light" type="submit" Name="SaveAdd" value="Spara och lägg till ny" />
 
-            </div>
-        </div>
     </form>
 </div>
 
-
-
-
+<br />
 
 <a asp-controller="Couple" asp-action="Vendor">Avbryt</a>
