--- a/YesDay/Views/Couple/Expense.cshtml
+++ b/YesDay/Views/Couple/Expense.cshtml
@@ -7,62 +7,67 @@
         <div class="col">
             <h2>Budget</h2>
         </div>
-        <div class="col">
-            <div>
-                <a href="/couple/settings"><input class="btn btn-light" type="submit" value="Ändra budget"></a>
-                Total budget: @Convert.ToInt32(Model.Item2.TotalBudget)
-                Totala utgifter: @Convert.ToInt32(Model.Item2.SumExpenses)
-            </div>
-        </div>
     </div>
-    <div class="row" style="margin-bottom:15px;">
-        <div class="col">
-            <a href="/couple/addexpense"><input class="btn btn-light" type="submit" value="Lägg till"></a>
-        </div>
-        <div id="progressbar" class="col">
-            <div class="tox-progress" data-size="100" data-thickness="12" data-color="#515D61" data-background="#fcfbf1" data-progress="@Convert.ToInt32(Model.Item2.Percentage)" data-speed="500">
-                <div class="tox-progress-content" data-vcenter="true">
-                    @Convert.ToInt32(Model.Item2.Percentage) % av budget
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div id="progressbar" class="col-md-auto">
+                <div class="tox-progress" data-size="100" data-thickness="12" data-color="#515D61" data-background="#fcfbf1" data-progress="@Convert.ToInt32(Model.Item2.Percentage)" data-speed="500">
+                    <div class="tox-progress-content" data-vcenter="true">
+                        @Convert.ToInt32(Model.Item2.Percentage) % av budget
+                    </div>
                 </div>
+                <script type="text/javascript">
+                    document.addEventListener('DOMContentLoaded', function () {
+                        ToxProgress.create();
+                        ToxProgress.animate();
+                    });
+                </script>
             </div>
-            <script type="text/javascript">
-                document.addEventListener('DOMContentLoaded', function () {
-                    ToxProgress.create();
-                    ToxProgress.animate();
-                });
-            </script>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Post</th>
-                        <th scope="col">Kostnad</th>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model.Item1)
-                    {
-                        <tr>
-                            <td>@item.Item</td>
-                            <td>@Convert.ToInt32(item.ActualCost)</td>
-                            <td> <a asp-controller="Couple" asp-action="UpdateExpense" asp-route-id="@item.Id">Uppdatera</a></td>
-                            @*<td> <a asp-controller="Couple" asp-action="DeleteExpense" asp-route-id="@item.Id" method="post">Ta bort</a></td>*@
-                            <td>
-                                <form asp-controller="Couple" asp-action="DeleteExpense" asp-route-id="@item.Id">
-                                    <input type="submit" class="btn btn-light" value="Ta bort" />
-                                </form>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
+</div>
+<div class="row" style="margin-bottom:15px;">
+    <div class="col">
+        <a href="/couple/addexpense"><input class="btn btn-light" type="submit" value="Lägg till  "></a>
+        <a href="/couple/settings"><input class="btn btn-light" type="submit" value="Ändra budget  "></a>
+    </div>
+    <div class="col">
+        <div class="float-right">
+            Total budget: @Convert.ToInt32(Model.Item2.TotalBudget)
+            Totala utgifter: @Convert.ToInt32(Model.Item2.SumExpenses)
         </div>
     </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Post</th>
+                    <th scope="col">Kostnad</th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Item1)
+                {
+                    <tr>
+                        <td>@item.Item</td>
+                        <td>@Convert.ToInt32(item.ActualCost)</td>
+                        <td> <a asp-controller="Couple" asp-action="UpdateExpense" asp-route-id="@item.Id">Uppdatera</a></td>
+                        <td>
+                            <form asp-controller="Couple" asp-action="DeleteExpense" asp-route-id="@item.Id">
+                                <input type="submit" class="btn btn-light" value="Ta bort  " />
+                            </form>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
 </div>
 
