--- a/YesDay/Views/Couple/AddExpense.cshtml
+++ b/YesDay/Views/Couple/AddExpense.cshtml
@@ -21,7 +21,7 @@
                     <span asp-validation-for="Item"></span>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="padding-top:10px">
                 <div class="col-3">
                     <label asp-for="ActualCost"></label>
                 </div>
