--- a/YesDay/Views/Couple/AddGuest.cshtml
+++ b/YesDay/Views/Couple/AddGuest.cshtml
@@ -21,7 +21,7 @@
                 <span asp-validation-for="Firstname"></span>
             </div>
         </div>
-        <div class="row">
+        <div class="row"  style="padding-top:10px">
             <div class="col-3">
                 <label asp-for="Lastname"></label>
             </div>
@@ -30,7 +30,7 @@
                 <span asp-validation-for="Lastname"></span>
             </div>
         </div>
-        <div class="row">
+        <div class="row"  style="padding-top:10px">
 
             <div class="col-3">
                 <label asp-for="Address"></label>
@@ -39,7 +39,7 @@
                 <input asp-for="Address" class="form-control" />
             </div>
         </div>
-        <div class="row">
+        <div class="row"  style="padding-top:10px">
 
             <div class="col-3">
                 <label asp-for="Email"></label>
@@ -51,7 +51,7 @@
             </div>
 
         </div>
-        <div class="row">
+        <div class="row" style="padding-top:10px">
 
             <div class="col-3">
                 <label asp-for="InvitedBy"></label>
@@ -62,7 +62,7 @@
             </div>
 
         </div>
-        <div class="row">
+        <div class="row" style="padding-top:10px">
 
             <div class="col-3">
                 <label asp-for="GuestTitle"></label>
@@ -71,7 +71,7 @@
                 <input asp-for="GuestTitle" class="form-control" />
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-top:10px">
 
             <div class="col-3">
                 <label asp-for="WeddingCrewTitle"></label>
@@ -82,7 +82,7 @@
             </div>
 
         </div>
-        <div class="row">
+        <div class="row" style="padding-top:10px">
 
             <div class="col-3">
                 <label asp-for="GuestStatus"></label>
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="padding-top:10px">
 
             <div class="col-3">
                 <label asp-for="FoodPreference"></label>
@@ -105,7 +105,7 @@
 
         </div>
 
-        <div class="row">
+        <div class="row" style="padding-top:10px">
 
             <div class="col-3">
                 <label asp-for="GuestNote"></label>
