--- a/YesDay/Views/Couple/Expense.cshtml
+++ b/YesDay/Views/Couple/Expense.cshtml
@@ -34,8 +34,8 @@
     </div>
     <div class="col">
         <div class="float-right">
-            Total budget: @Convert.ToInt32(Model.Item2.TotalBudget)
-            Totala utgifter: @Convert.ToInt32(Model.Item2.SumExpenses)
+            Budget: @Convert.ToInt32(Model.Item2.TotalBudget) kr
+           &ensp; Utgifter: @Convert.ToInt32(Model.Item2.SumExpenses) kr
         </div>
     </div>
 </div>
