--- a/YesDay/Views/Couple/UpdateExpense.cshtml
+++ b/YesDay/Views/Couple/UpdateExpense.cshtml
@@ -11,6 +11,8 @@
 
 
 <form asp-controller="Couple" asp-action="UpdateExpense" method="post">
+    <p class="obligatorisk">(* = Obligatoriska fält)</p>
+
     <div class="form-group-row">
         <div class="row">
             <div class="col-3">
@@ -21,7 +23,7 @@
                 <span asp-validation-for="Item"></span>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-top:10px">
             <div class="col-3">
                 <label asp-for="ActualCost"></label>
             </div>
