--- a/YesDay/Views/Couple/Settings.cshtml
+++ b/YesDay/Views/Couple/Settings.cshtml
@@ -6,6 +6,7 @@
     </div>
 </div>
 <form asp-controller="couple" asp-action="settings">
+    <p class="obligatorisk">(* = Obligatoriska fält)</p>
 
     @*<label asp-for="Password"></label>
         <input asp-for="Password" />
