--- a/YesDay/Views/Couple/Overview.cshtml
+++ b/YesDay/Views/Couple/Overview.cshtml
@@ -19,7 +19,7 @@
         <div class="shadow-lg p-3 mb-5 bg-white rounded, col">
             <a asp-controller="Couple" asp-action="checklist" style="text-decoration:none;">
                 <img src="~/Images/checklista.png" alt="Checklista" style="width:75px;height:75px;" />
-                <p>Checklistan hjälper er att hålla koll på all to-do’s inför den stora dagen. Markera sätt status direkt på uppgiften!</p>
+                <p>Checklistan hjälper er att hålla koll på all to-do’s inför den stora dagen. Här kan ni enkelt ändra status på uppgiften!</p>
             </a>
         </div>
         <div class="shadow-lg p-3 mb-5 bg-white rounded, col">
