--- a/YesDay/Views/Shared/_PublicLayout.cshtml
+++ b/YesDay/Views/Shared/_PublicLayout.cshtml
@@ -80,7 +80,7 @@
             <div class="container">
                 <h3>YesDay</h3>
                 <div class="col-4">
-                    <h4>Planerar ni bröllop?</h4>
+                    <h4>Planerar ni ert bröllop?</h4>
                     <p>
                         På YesDay hittar ni allt ni behöver inför er planering av bröllopet.
                         Här kan ni få en överblick av bland annat, er gästlista, saker ni behöver boacka av inför bröllopet,
