--- a/YesDay/Views/Couple/GuestList.cshtml
+++ b/YesDay/Views/Couple/GuestList.cshtml
@@ -26,10 +26,10 @@
             <a href="/couple/addguest"><input class="btn btn-light" type="submit" value="Lägg till"></a><br /><br />
         </div>
         <div class="col" style="color:#9FB8BF">
-            <h4>|&ensp;&ensp; @Model.Item1.Length &ensp;&ensp;|</h4> 
+            <h4>|&ensp; @Model.Item1.Length &ensp;|</h4> 
         </div>
         <div class="col" style="color:#9FB8BF">
-            <h4>|&ensp;&ensp; @Model.Item2.GuestCount[0] &ensp;&ensp;|</h4>
+            <h4>|&ensp; @Model.Item2.GuestCount[0] &ensp;|</h4>
         </div>
         <div class="col" style="color:#9FB8BF">
             <h4>|&ensp;&ensp; @Model.Item2.GuestCount[1] &ensp;&ensp;|</h4>
